# jageocoder-dbtool

./: .gitignore  README.md  README_ja.md  pyproject.toml  sample.py
docs/: manual.html  manual.markdown  python_environment_cmd.markdown  python_environment_linux.markdown  python_environment_macosx.markdown
jageocoder_dbcreator/: __main__.py  converter.py  convertor.py  data_manager.py  old__init__.py
jageocoder_dbtool/: __main__.py  convertor.py  customtypes.py  data_manager.py
